Irace upgrade and objectives refactor (#261)
* partial impl

* Docs: custom ordering plugin, create concepts template

* Partial new Objectives implementation

* Changes for Irace 3.9 part 1

* Remove ANTLR error printing to console

* Improve R error handling

* Add compatibility with latest Irace version and add follower mode to irace executor to make debugging easier

* Refactor objectives part 1

* Add library import in scenario so it works with ablation too

* Complete refactor of objectives and the related tests, all algorithms now use Objectives instead of FMode. Delete isBetterThan from solution, and prepare to delete getScore() and recalculateScore()

* Improve result error handling in Executor

* Complete merge

* Upgrade dependencies, regenerate grammar for ANTLR 4.13.2

* replace old Metrics.add usage with Metrics.addCurrentObjectives

* Install remotes package and Irace from github by default

* remove extra quotes runner.R

* Fix test coverage analysis

* Fix coverage 2: sonar had the wrong path to jacoco.xml

* Delete Debug class, superseded by log.debug

* Improve ArrayUtil::reverse, add ArrayUtil::stats, implement their tests

* Add ArrayUtil::copyAndShuffle(Object[]), and two more missing tests.

* SolverConfig change seed int to long

* Simplify poms

* AspectJ support

* AspectJ support fix

* move aspect library to template

* move aspect library to template 2

* Change --add-opens blocks to Aspectj, enable-preview by default

* Downgrade springboot to 3.3.2 to fix regression in logback

* Optional instanceName and Score in SolutionGeneratedEvent

* last change to pom.xml parent

* Add -parameters to acj compiler

* New irace features

* remove --enable-preview

* install pandoc on ci

* Complete first AOP impl, extract time execution data while algorithms are running
Remove leftover println in BitSetTest

* Fix MultiStartAlgorithmTest

* Add construction to TimedAspect t